Tab Hover Improvements  - Use primary opaque hover background color for request tabs to have better contrast  - Correct some flex centering on context ContextPanel  - Less padding by default on hover icon buttons

--- a/Siren/wwwroot/app.css
+++ b/Siren/wwwroot/app.css
@@ -630,3 +630,15 @@ button:focus {
 .h-100 {
     height: 100%!important;
 }
+
+.mud-tabs-tabbar-primary .mud-tab:hover {
+    background-color: rgba(var(--mud-palette-primary-rgb), 0.25);
+}
+
+.mud-tabs-tabbar-primary .mud-tab.mud-tab-active:hover {
+    background-color: rgba(var(--mud-palette-primary-rgb), 0.20);
+}
+
+.mud-icon-button {
+    padding: 8px;
+}
